# vcg-auction

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  traits.rs  vcg.rs
src/types/: mod.rs  simple_bid.rs
tests/: complexity.rs  float.rs  secrecy.rs  simple.rs
