[package]
name        = "vcg-auction"
version     = "0.2.0"
authors     = ["daylightwarbler <daylightwarbler@proton.me>"]
license     = "MIT OR Apache-2.0"
description = "A Vickrey-Clarke-Groves auction library."
repository  = "https://github.com/daylightwarbler/vcg-auction/"
readme      = "README.md"
categories  = ["algorithms", "finance"]
keywords    = ["vcg", "vickrey", "auction", "second-price", "sealed-bid"]
edition     = "2021"
rust-version = "1.56.1" # probably higher than necessary


[features]
default = ["rand"]

[dependencies]
num-traits = "0.2.18"
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
secrecy = "0.8.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
